# firebase-microservice

./: .gitignore  README.md  docker-compose.yaml
auth-frontend/: Dockerfile  docker-compose.yaml  package-lock.json  package.json
auth-frontend/src/component/layout/: Navbar.js
auth-frontend/src/component/profile/: Profile.js
auth-frontend/src/component/users/: CreateUser.js  ListUsers.js
auth-frontend/src/pages/: Home.js  UserDetail.js
auth-frontend/src/redux/: store.js  types.js
auth-frontend/src/redux/actions/: dataAction.js  userAction.js
auth-frontend/src/redux/reducers/: dataReducer.js  userReducer.js
auth-frontend/src/utils/: AuthRoute.js  validator.js
task-frontend/: package-lock.json  package.json
task-frontend/src/: App.css  App.js
task-frontend/src/component/layout/: Navbar.js
task-frontend/src/component/profile/: StaticProfile.js
task-frontend/src/component/tasks/: ListTasks.js  PostTask.js
task-frontend/src/pages/: Home.js  Login.js
task-frontend/src/redux/: types.js
task-frontend/src/redux/actions/: dataAction.js  userAction.js
task-frontend/src/utils/: MyButton.js  errorHandler.js  fire.js  helper.js  theme.js  validator.js
tasks/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
tasks/tasks/: config.py  crud.py  main.py  models.py  routes.py
tasks/tasks/mongodb/: collections.py  connection.py
users/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
users/users/: auth.py  config.py  crud.py  main.py  models.py  routes.py
users/users/mongodb/: collections.py  db.py
(+1 files in other folders)
