[tool.poetry]
name = "users"
version = "0.1.0"
description = "users backend api"
authors = ["tinnaing347 <tinnaing347@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
fastapi = "^0.68.1"
fastapi-cloudauth = "^0.4.0"
motor = "^2.5.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
firebase-admin = "^5.0.3"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
